# stakenet-simulator

./: .gitignore  Cargo.toml  README.md  a.txt  flake.nix
services/cli/: Cargo.toml  cargo.toml
services/cli/src/: error.rs  macros.rs  main.rs  steward_utils.rs
services/cli/src/commands/: backtest.rs  fetch_active_stake.rs  fetch_inactive_stake.rs  mod.rs
services/cli/src/utils/: backtest_rebalance.rs  backtest_utilization.rs  dune.rs  mod.rs  rebalancing_simulator.rs  validator_stake_state.rs
services/epoch-rewards-tracker/: Cargo.toml
services/epoch-rewards-tracker/src/: cluster_history.rs  config.rs  dune.rs  errors.rs  fetch_active_stake.rs  fetch_inactive_stake.rs  inflation.rs  main.rs  priority_fees.rs  rpc_utils.rs  stake_accounts.rs  steward_utils.rs  validator_history.rs  validator_history_utils.rs  withdraw_and_deposit_sol.rs  withdraw_and_deposits.rs
services/epoch-rewards-tracker/src/scripts/: epoch_rewards.rs
stakenet-simulator-db/: Cargo.toml
stakenet-simulator-db/src/: active_stake_jito_sol.rs  big_decimal_u64.rs  cluster_history.rs  cluster_history_entry.rs  epoch_priority_fees.rs  epoch_rewards.rs  error.rs  inactive_stake_jito_sol.rs  inflation_rewards.rs  lib.rs  macros.rs  stake_accounts.rs  validator_history.rs  validator_history_entry.rs  withdraw_and_deposit_sol.rs  withdraw_and_deposits.rs  withdraw_and_deposits_stake.rs
supabase/: config.toml
supabase/migrations/: 20250708011221_create-initial-tables.sql  20250714223959_add-priority-fee-merkle-upload-authority-field.sql  20250716001633_add-stake-accounts-table.sql  20250716171242_add-inflation-rewards-table.sql  20250718113923_add-epoch-priority-fees.sql  20250721235900_add-cluster-history-entries.sql  20250723204110_add-validator-histories-table.sql  20250723215020_add-cluster-histories-table.sql  20250723233456_alter-cluster-history-struct-version-type.sql  20250805000000_add-jito-stake-tables.sql  20250806000000_update_active_stake_jito_sol_primary_key.sql  20250909000000_withdraws_and_deposits.sql  20251003000000_withdraw_and_deposit_sol.sql
supabase/schemas/0_setup/: 001_extensions.sql
supabase/schemas/1_tables/: 001_epoch_rewards.sql  002_validator_history_entry.sql  003_stake_accounts.sql  004_inflation_rewards.sql  005_epoch_priority_fees.sql  006_cluster_history_entries.sql  007_validator_histories.sql  008_cluster_histories.sql  009_inactive_stake_jito_sol.sql  010_active_stake_jito_sol.sql  011_withdraws_and_deposits.sql  012_withdraw_deposit_sol.sql
