[workspace]
members = [ "services/epoch-rewards-tracker",
  "stakenet-simulator-db"
]

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[workspace.dependencies]
anchor-lang = "0.31.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
solana-account-decoder-client-types = "=2.2.1"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal" ] }
thiserror = {version = "2.0.12"}
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator-history = { package = "validator-history", features = ["no-entrypoint"], git = "https://github.com/jito-foundation/stakenet", branch = "tj/fix-deps-for-external" }
