[package]
name = "stakenet-simulator-db"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal" ] }
thiserror = { workspace = true }
tracing = { workspace = true }
validator-history = { workspace = true }
