[package]
name = "epoch-rewards-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = { workspace = true }
dotenvy = { workspace = true }
envy = "0.4.2"
serde = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal" ] }
stakenet-simulator-db = { path = "../../stakenet-simulator-db" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
validator-history = { workspace = true }
