[package]
name = "epoch-rewards-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = { workspace = true }
borsh = "1.5.7"
dotenvy = { workspace = true }
envy = "0.4.2"
futures = "0.3.21"
regex = { workspace = true }
serde = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status-client-types= { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "chrono", "bigdecimal" ] }
stakenet-simulator-db = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
validator-history = { workspace = true }
jito-steward = { workspace = true }
